:mag: :dvd: Adding search album routes - by name and artist + documentation for this routes
